# pgflow

./: .editorconfig  .envrc  .envrc.local.example  .gitignore  .gitlab-ci.yml  .ignore  .mcp.json  .npmrc  .nxignore  .sqruff  .tool-versions  ARCHITECTURE_GUIDE.md  BRANCHING.md  BROADCAST.md  CLAUDE.md  CODEBASE.md  COMPILE_WORKER.md  CONTRIBUTING.md  DECISIONS.md  DIATAXIS.md  DOCS_GUIDE.md  EDGE_CASES_AND_RECOVERY.md  EDGE_RUNTIME_HOT_RELOAD.md  EXAMPLES_EMBEDDINGS.md  FAILURE_REASONS.md  FANOUT_APPEND_TASK.md  FANOUT_DSL.md  FANOUT_SQL.md  FANOUT_SQL_complete_task.md  FANOUT_SQL_empty_array_mode.md  FANOUT_SQL_start_ready_steps.md  FANOUT_SQL_start_tasks.md  FRONTEND_TRANSPORT_DESIGN.md  FRONTEND_TRANSPORT_SUMMARY.md  GATES.md  GHOST_STEPS.md  IDEAS.md  INTEGRATION_VALUE_ASSESSMENT.md  LEVELS_OF_ABSTRACTION.md  LICENSE.md  (+97 more)
.changeset/: add-map-method-to-dsl.md  add-map-step-type-infrastructure.md  add-migration-installer-api.md  add-pgflow-auth-secret-support.md  add-when-failed-option.md  asymmetric-handler-signatures.md  auto-compile-http-control.md  auto-compile-on-startup.md  blue-mirrors-roll.md  bright-clocks-bet.md  brown-nails-dream.md  bumpy-words-scream.md  busy-files-beg.md  calm-mails-swim.md  calm-owls-ask.md  calm-ties-give.md  chubby-parts-pick.md  clean-zoos-smoke.md  clear-signal-beam.md  client-realtime-stabilization-delay.md  compilation-config-allow-data-loss.md  conditional-step-execution.md  config.json  cool-rivers-call.md  (+96 more)
ai-tools/: pyproject.toml  requirements.txt
ai-tools/ai_tools/: embed.py
ai-tools/ai_tools/pipelines/: import_epubs.py
(+2643 files in other folders)
