[tool.poetry]
name = "ai-tools"
version = "0.1.0"
description = ""
authors = ["Wojciech Majewski <wojciech.majewski@pm.me>"]
readme = "README.md"
packages = [{include = "ai_tools"}]

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.0"
sentence-transformers = {version = "^2.2.2", extras = ["embeddings"]}
langchain = "^0.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
